--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quite-night-theme",
   "version": "1.0.0",
-  "publisher": "cdxy",
+  "publisher": "VavilenBader",
   "engines": {
     "vscode": "^1.75.0"
   },
